--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ashraf-kabir/mern-ecommerce.git"
+    "url": "git+https://github.com/madhurgarg02/EKart.git"
   },
   "keywords": [],
-  "author": "Ashraf Kabir",
-  "license": "MIT",
+  "author": "Madhur Garg",
+  "license": "",
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
